tests/snapshots/run_wpt_conformance__coreml_reduceL1_float32_3D_tensor_options_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_l1.https.any.js",
    "reduceL1 float32 3D tensor options.axes",
    "coreml",
    "PASS",
)
